# oop_petrov

./: CMakeLists.txt  README.md  main.cpp  petrov_header.h  petrov_item.cpp  petrov_item.h  petrov_shop.cpp  petrov_shop.h  petrov_used_item.cpp  petrov_used_item.h
